[package]
name = "toolchain_find"
version = "0.2.0"
authors = ["Garrett Squire <github@garrettsquire.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gsquire/toolchain_find"
documentation = "https://docs.rs/toolchain_find"
description = "A small library to help find installed Rust components"
readme = "README.md"

[dependencies]
home = "0.5"
once_cell = "1"
regex = "1.4"
semver = "1"
walkdir = "2.3"
